--- a/category-pages/diy.html
+++ b/category-pages/diy.html
@@ -1,1 +1,94 @@
-  
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/style.css">
+  <link rel="icon" href="images/icons/iconmonstr-circle-1-240 (1) (1).png">
+	<title>Treecreeper Test Website | Category Page</title>
+</head>
+
+<body>
+	<nav>
+		<ul>
+			<li>
+				<a href="/">
+					<img src="/images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
+          </a>
+        </li>
+        <li><a href="/">Stores</a></li>
+        <li><a href="/">Ideas & Advice</a></li>
+        <li><a href="/">Basket</a></li>
+        <li><a href="/">Contact</a></li>
+      </ul>
+    </nav id="home-nav">
+    <section class="products-nav">
+      <ul>
+        <li>
+          <a href="bedroom.html">
+            Bedroom
+          </a>
+        </li>
+        <li>
+          <a href="diy.html">
+            Kitchen
+          </a>
+        </li>
+        <li>
+          <a href="electronics.html">
+            Garden
+          </a>
+        </li>
+        <li>
+          <a href="garden.html">
+            DIY
+          </a>
+        </li>
+        <li>
+          <a href="kichen.html">
+            Electronics
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="title-header">
+      <h2>Our Range Of DIY Products</h2>
+      <hr>
+    </section>
+    <section class="product-page-options">
+      <ul class="options-list">
+        <li>
+          <img src="/images/photos/roselyn-tirado-GDWmu0bFfS4-unsplash.jpg" alt="bed">\
+          <a class="category-page-button" href="/bedroom-listing-pages/small-beds.html">Power Tools</a>
+        </li>
+        <li>
+          <img src="/images/photos/roselyn-tirado-GDWmu0bFfS4-unsplash.jpg" alt="bed">
+          <a class="category-page-button" href="/bedroom-listing-pages/medium-beds.html">Hand Tools</a>
+        </li>
+        <li>
+          <img src="/images/photos/roselyn-tirado-GDWmu0bFfS4-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="/bedroom-listing-pages/large-beds.html">Paint</a>
+        </li>
+        <li>
+          <img src="/images/photos/roselyn-tirado-GDWmu0bFfS4-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="/bedroom-listing-pages/futons.html">Materials</a>
+        </li>        <li>
+          <img src="/images/photos/roselyn-tirado-GDWmu0bFfS4-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="/bedroom-listing-pages/classic-beds.html">Fittings</a>
+        </li>        <li>
+          <img src="/images/photos/roselyn-tirado-GDWmu0bFfS4-unsplash.jpg" alt="bed">
+           <a class="category-page-button" href="/bedroom-listing-pages/custom-beds.html">Decorations</a>
+        </li>
+      </ul>
+    </section>
+    <footer class="socials-footer">
+  <ul>
+    <li><a href="/">Instagram</a></li>
+    <li><a href="/">Facebook</a></li>
+    <li><a href="/">Twitter</a></li>
+    <li><a href="/">Email</a></li>
+  </ul>
+</footer>
+</body>
+</html>
