--- a/category-pages/garden.html
+++ b/category-pages/garden.html
@@ -17,7 +17,8 @@
 					<img src="/images/icons/iconmonstr-circle-1-240 (1) (1).png" alt="Logo" />
           </a>
         </li>
-        <li><a href="/">Stores</a></li>
+        <li
+        ><a href="/">Stores</a></li>
         <li><a href="/">Ideas & Advice</a></li>
         <li><a href="/">Basket</a></li>
         <li><a href="/">Contact</a></li>
@@ -46,7 +47,7 @@
           </a>
         </li>
         <li>
-          <a href="kichen.html">
+          <a href="kitchen.html">
             Kitchen
           </a>
         </li>
