--- a/category-pages/electronics.html
+++ b/category-pages/electronics.html
@@ -32,22 +32,22 @@
         </li>
         <li>
           <a href="diy.html">
-            Kitchen
-          </a>
-        </li>
-        <li>
-          <a href="electronics.html">
-            Garden
-          </a>
-        </li>
-        <li>
-          <a href="garden.html">
             DIY
           </a>
         </li>
         <li>
-          <a href="kichen.html">
+          <a href="electronics.html">
             Electronics
+          </a>
+        </li>
+        <li>
+          <a href="garden.html">
+            Garden
+          </a>
+        </li>
+        <li>
+          <a href="kitchen.html">
+            Kitchen
           </a>
         </li>
       </ul>
